tests/neg-custom-args/captures/filevar.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/filevar.scala:15:12 --------------------------------------
15 |  withFile: f =>       // error with level checking, was OK under both schemes before
   |            ^
   |Found:    (l: scala.caps.Capability^) ?->'s1 File^'s2 ->'s3 Unit
   |Required: (l²: scala.caps.Capability^) ?-> (f: File^{l²}) => Unit
   |
   |Note that capability `l` is not included in capture set {o.any}
   |because (l : scala.caps.Capability) is not visible from o.any in value o.
   |
   |where:    => refers to a root capability created in method test when checking argument to parameter op of method withFile
   |          ^  refers to the root capability caps.any
   |          l  is a reference to a value parameter
   |          l² is a reference to a value parameter
   |
16 |    val o = Service()
17 |    o.file = f
18 |    o.log
   |
   | longer explanation available when compiling with `-explain`
